--- a/U2-D5/base_di_partenza/index.html
+++ b/U2-D5/base_di_partenza/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,5 +24,168 @@
 
   <body>
     <!-- ARTWORK con "M" ripetute -->
+    <header>
+      <!-- nav bar -->
+      <nav>
+        <img
+          src="./assets/imgs/svg/logo.svg"
+          alt="logo medium"
+          class="logo-img"
+        />
+        <ul>
+          <li>Our Story</li>
+          <li>Membership</li>
+          <li>Write</li>
+          <li>Sing In</li>
+        </ul>
+        <button class="btn btn-nav">Get Started</button>
+      </nav>
+      <hr />
+      <div class="contain-header">
+        <div class="contain-title">
+          <h1>Stay curious.</h1>
+          <p>
+            Discover stories,thinking, and expertise <br />
+            from writers on any topic.
+          </p>
+          <button class="btn btn-header">Start reading</button>
+        </div>
+        <img
+          src="./assets/imgs/svg/emme.svg"
+          alt="emme dinamiche"
+          class="emme"
+        />
+      </div>
+    </header>
+    <main>
+      <!-- creo le 6 card -->
+      <section>
+        <h3>Tranding on Medium</h3>
+        <div class="container-box">
+          <div class="box">
+            <div class="numero">01</div>
+            <div class="box-info">
+              <p>Tom Cooper</p>
+              <h4>Ukraine War, 23 October 2022</h4>
+              <p>Oct 23·5 min read</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="numero">02</div>
+            <div class="box-info">
+              <p>Arthur Hayes in Entrepreneur's Handbook</p>
+              <h4>Comeback</h4>
+              <p>Oct 26·24 min read</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="numero">03</div>
+            <div class="box-info">
+              <p>Tom Cooper</p>
+              <h4>
+                How I Learned to Love My Breasts Even Though One Is A Horcrux
+                For Voldemort
+              </h4>
+              <p>Oct 26·2 min read</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="numero">04</div>
+            <div class="box-info">
+              <p>Frank Mastropolo in The Riffk</p>
+              <h4>
+                The Night Paul McCartney Donned a Disguise at Fillmore East
+              </h4>
+              <p>Oct 22·3 min read</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="numero">05</div>
+            <div class="box-info">
+              <p>Frank Andrade in Towards Data Science</p>
+              <h4>
+                5 Python Projects to Automate Your Life: From Beginner to
+                Advanced
+              </h4>
+              <p>Oct 13·6 min read</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="numero">06</div>
+            <div class="box-info">
+              <p>Wesley Smits in JavaScript in Plain English</p>
+              <h4>How To Make Visual Studio Code Look Amazing3</h4>
+              <p>Oct 20·7 min read</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <article>
+        <div class="box-article">
+          <p>Robert Roy Britt</p>
+          <h2>How Old is Old?</h2>
+          <p>
+            What we consider “old” changes dramatically with age, and our
+            perspectives can be predictive of how well we age
+          </p>
+          <p>Oct 27 · 5 min read · Aging</p>
+        </div>
+        <div class="box-article">
+          <p>Taru Anniina Liikanen</p>
+          <h2>Is Taylor Swift Allowed to Speak About Fat?</h2>
+          <p>Can you speak about your trauma if you don't look traumatized?</p>
+          <p>Oct 24 · 6 min read · Health</p>
+        </div>
+        <div class="box-article">
+          <p>David Rodenas, Ph. D.</p>
+          <h2>Don’t Screw Up, You Will Be Found Guilty</h2>
+          <p>
+            Software Engineer, yours is the right to produce high-quality work
+            at all times, also the liability.
+          </p>
+          <p>Oct 15 · 5 min read · Software Engineering</p>
+        </div>
+        <div class="box-article">
+          <p>Microsoft Design</p>
+          <h2>Leave No Trace</h2>
+          <p>
+            How product designers can break from the status quo and help our
+            planet
+          </p>
+          <p>Oct 25 · 11 min read · Sustainability</p>
+        </div>
+        <div class="box-article">
+          <p>Scott H. Young</p>
+          <h2>Variability, Not Repetition, is the Key to Mastery</h2>
+          <p>
+            Bruce Lee is reported to have said, “I fear not the man who has
+            practiced 10,000 kicks once, but the man who has practiced one kick
+            10,000...
+          </p>
+          <p>Oct 26 · 7 min read · Health</p>
+        </div>
+        <div class="box-article">
+          <p>Paul A. DeStefanoin Human Parts</p>
+          <h2>what I Overheard as an Escape Room Acto</h2>
+          <p>
+            Lock a group of people in a room and you’ll witness some surprising
+            confessions
+          </p>
+          <p>Jan 18, 2020 · 6 min read · Experiences</p>
+        </div>
+        <div class="box-article">
+          <p>Kim Scott</p>
+          <h2>
+            6 Steps for Setting Measurable Goals to Avoid “Productivity
+            Paranoia”
+          </h2>
+          <p>
+            With more people working in remote and hybrid environments than ever
+            before, company, team and individual goals must be explicit and…
+          </p>
+          <p>Oct 24 · 6 min read · Health</p>
+        </div>
+      </article>
+    </main>
   </body>
 </html>
