--- a/U2-D5/base_di_partenza/index.html
+++ b/U2-D5/base_di_partenza/index.html
@@ -120,72 +120,151 @@
           </div>
         </div>
       </section>
-      <article>
-        <div class="box-article">
-          <p>Robert Roy Britt</p>
-          <h2>How Old is Old?</h2>
-          <p>
-            What we consider “old” changes dramatically with age, and our
-            perspectives can be predictive of how well we age
-          </p>
-          <p>Oct 27 · 5 min read · Aging</p>
-        </div>
-        <div class="box-article">
-          <p>Taru Anniina Liikanen</p>
-          <h2>Is Taylor Swift Allowed to Speak About Fat?</h2>
-          <p>Can you speak about your trauma if you don't look traumatized?</p>
-          <p>Oct 24 · 6 min read · Health</p>
-        </div>
-        <div class="box-article">
-          <p>David Rodenas, Ph. D.</p>
-          <h2>Don’t Screw Up, You Will Be Found Guilty</h2>
-          <p>
-            Software Engineer, yours is the right to produce high-quality work
-            at all times, also the liability.
-          </p>
-          <p>Oct 15 · 5 min read · Software Engineering</p>
-        </div>
-        <div class="box-article">
-          <p>Microsoft Design</p>
-          <h2>Leave No Trace</h2>
-          <p>
-            How product designers can break from the status quo and help our
-            planet
-          </p>
-          <p>Oct 25 · 11 min read · Sustainability</p>
-        </div>
-        <div class="box-article">
-          <p>Scott H. Young</p>
-          <h2>Variability, Not Repetition, is the Key to Mastery</h2>
-          <p>
-            Bruce Lee is reported to have said, “I fear not the man who has
-            practiced 10,000 kicks once, but the man who has practiced one kick
-            10,000...
-          </p>
-          <p>Oct 26 · 7 min read · Health</p>
-        </div>
-        <div class="box-article">
-          <p>Paul A. DeStefanoin Human Parts</p>
-          <h2>what I Overheard as an Escape Room Acto</h2>
-          <p>
-            Lock a group of people in a room and you’ll witness some surprising
-            confessions
-          </p>
-          <p>Jan 18, 2020 · 6 min read · Experiences</p>
-        </div>
-        <div class="box-article">
-          <p>Kim Scott</p>
-          <h2>
-            6 Steps for Setting Measurable Goals to Avoid “Productivity
-            Paranoia”
-          </h2>
-          <p>
-            With more people working in remote and hybrid environments than ever
-            before, company, team and individual goals must be explicit and…
-          </p>
-          <p>Oct 24 · 6 min read · Health</p>
-        </div>
-      </article>
+      <hr />
+      <!-- creo la sezione articoli -->
+      <div class="big-container">
+        <article>
+          <div class="box-article">
+            <p>Robert Roy Britt</p>
+            <h2>How Old is Old?</h2>
+            <p>
+              What we consider “old” changes dramatically with age, and our
+              perspectives can be predictive of how well we age
+            </p>
+            <p>Oct 27 · 5 min read · Aging</p>
+          </div>
+          <div class="box-article">
+            <p>Taru Anniina Liikanen</p>
+            <h2>Is Taylor Swift Allowed to Speak About Fat?</h2>
+            <p>
+              Can you speak about your trauma if you don't look traumatized?
+            </p>
+            <p>Oct 24 · 6 min read · Health</p>
+          </div>
+          <div class="box-article">
+            <p>David Rodenas, Ph. D.</p>
+            <h2>Don’t Screw Up, You Will Be Found Guilty</h2>
+            <p>
+              Software Engineer, yours is the right to produce high-quality work
+              at all times, also the liability.
+            </p>
+            <p>Oct 15 · 5 min read · Software Engineering</p>
+          </div>
+          <div class="box-article">
+            <p>Microsoft Design</p>
+            <h2>Leave No Trace</h2>
+            <p>
+              How product designers can break from the status quo and help our
+              planet
+            </p>
+            <p>Oct 25 · 11 min read · Sustainability</p>
+          </div>
+          <div class="box-article">
+            <p>Scott H. Young</p>
+            <h2>Variability, Not Repetition, is the Key to Mastery</h2>
+            <p>
+              Bruce Lee is reported to have said, “I fear not the man who has
+              practiced 10,000 kicks once, but the man who has practiced one
+              kick 10,000...
+            </p>
+            <p>Oct 26 · 7 min read · Health</p>
+          </div>
+          <div class="box-article">
+            <p>Paul A. DeStefanoin Human Parts</p>
+            <h2>what I Overheard as an Escape Room Acto</h2>
+            <p>
+              Lock a group of people in a room and you’ll witness some
+              surprising confessions
+            </p>
+            <p>Jan 18, 2020 · 6 min read · Experiences</p>
+          </div>
+          <div class="box-article">
+            <p>Kim Scott</p>
+            <h2>
+              6 Steps for Setting Measurable Goals to Avoid “Productivity
+              Paranoia”
+            </h2>
+            <p>
+              With more people working in remote and hybrid environments than
+              ever before, company, team and individual goals must be explicit
+              and…
+            </p>
+            <p>Oct 24 · 6 min read · Health</p>
+          </div>
+          <div class="box-article">
+            <p>Taru Anniina Liikanen</p>
+            <h2>Is Taylor Swift Allowed to Speak About Fat?</h2>
+            <p>
+              Can you speak about your trauma if you don't look traumatized?
+            </p>
+            <p>Oct 24 · 6 min read · Health</p>
+          </div>
+          <div class="box-article">
+            <p>David Rodenas, Ph. D.</p>
+            <h2>Don’t Screw Up, You Will Be Found Guilty</h2>
+            <p>
+              Software Engineer, yours is the right to produce high-quality work
+              at all times, also the liability.
+            </p>
+            <p>Oct 15 · 5 min read · Software Engineering</p>
+          </div>
+          <div class="box-article">
+            <p>Microsoft Design</p>
+            <h2>Leave No Trace</h2>
+            <p>
+              How product designers can break from the status quo and help our
+              planet
+            </p>
+            <p>Oct 25 · 11 min read · Sustainability</p>
+          </div>
+          <div class="box-article">
+            <p>Scott H. Young</p>
+            <h2>Variability, Not Repetition, is the Key to Mastery</h2>
+            <p>
+              Bruce Lee is reported to have said, “I fear not the man who has
+              practiced 10,000 kicks once, but the man who has practiced one
+              kick 10,000...
+            </p>
+            <p>Oct 26 · 7 min read · Health</p>
+          </div>
+          <div class="box-article">
+            <p>Paul A. DeStefanoin Human Parts</p>
+            <h2>what I Overheard as an Escape Room Acto</h2>
+            <p>
+              Lock a group of people in a room and you’ll witness some
+              surprising confessions
+            </p>
+            <p>Jan 18, 2020 · 6 min read · Experiences</p>
+          </div>
+          <div class="box-article">
+            <p>Kim Scott</p>
+            <h2>
+              6 Steps for Setting Measurable Goals to Avoid “Productivity
+              Paranoia”
+            </h2>
+            <p>
+              With more people working in remote and hybrid environments than
+              ever before, company, team and individual goals must be explicit
+              and…
+            </p>
+            <p>Oct 24 · 6 min read · Health</p>
+          </div>
+        </article>
+        <aside>
+          <h5>Discover more of what matters to you</h5>
+          <div class="container-dicover">
+            <button>Programming</button>
+            <button>DataScience</button>
+            <button>Technology</button>
+            <button>Self Improvement</button>
+            <button>Writing</button>
+            <button>Relationships</button>
+            <button>Machine Learning</button>
+            <button>Productivity</button>
+            <button>Politics</button>
+          </div>
+        </aside>
+      </div>
     </main>
   </body>
 </html>
