aggiunta transition allo scroll della pagina

--- a/U2-D5/base_di_partenza/index.html
+++ b/U2-D5/base_di_partenza/index.html
@@ -38,8 +38,8 @@
           <li>Write</li>
           <li>Sing In</li>
         </ul>
-        <button class="btn btn-nav">Get Started</button>
-        <hr />
+        <button class="btn btn-nav" id="scroll-btn">Get Started</button>
+        <!-- <hr /> -->
       </nav>
       <div class="contain-header">
         <div class="contain-title">
@@ -57,6 +57,7 @@
         />
       </div>
     </header>
+    <!--  <hr /> -->
     <main>
       <!-- creo le 6 card -->
       <section>
@@ -266,5 +267,7 @@
         </aside>
       </div>
     </main>
+
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
