--- a/U2-D5/base_di_partenza/index.html
+++ b/U2-D5/base_di_partenza/index.html
@@ -26,7 +26,7 @@
     <!-- ARTWORK con "M" ripetute -->
     <header>
       <!-- nav bar -->
-      <nav>
+      <nav id="navBar">
         <img
           src="./assets/imgs/svg/logo.svg"
           alt="logo medium"
