aggiunte ultime modifiche

--- a/U2-D5/base_di_partenza/index.html
+++ b/U2-D5/base_di_partenza/index.html
@@ -61,12 +61,18 @@
     <main>
       <!-- creo le 6 card -->
       <section>
-        <h3>Tranding on Medium</h3>
+        <div class="titolo-section">
+          <img src="./assets/imgs/svg/trending.svg" alt="minilogo trend" />
+          <h3>Tranding on Medium</h3>
+        </div>
         <div class="container-box">
           <div class="box">
             <div class="numero">01</div>
             <div class="box-info">
-              <p>Tom Cooper</p>
+              <div class="box-info-titolo">
+                <img src="./assets/imgs/image01.jpeg" alt="icona articolo 1" />
+                <p>Tom Cooper</p>
+              </div>
               <h4>Ukraine War, 23 October 2022</h4>
               <p>Oct 23·5 min read</p>
             </div>
