aggiunte modifiche alla navbar funzionamento corretto della transition durante lo scroll

--- a/U2-D5/base_di_partenza/index.html
+++ b/U2-D5/base_di_partenza/index.html
@@ -27,18 +27,20 @@
     <header>
       <!-- nav bar -->
       <nav id="navBar">
-        <img
-          src="./assets/imgs/svg/logo.svg"
-          alt="logo medium"
-          class="logo-img"
-        />
-        <ul>
-          <li>Our Story</li>
-          <li>Membership</li>
-          <li>Write</li>
-          <li>Sing In</li>
-        </ul>
-        <button class="btn btn-nav" id="scroll-btn">Get Started</button>
+        <div class="nav-container">
+          <img
+            src="./assets/imgs/svg/logo.svg"
+            alt="logo medium"
+            class="logo-img"
+          />
+          <ul>
+            <li>Our Story</li>
+            <li>Membership</li>
+            <li>Write</li>
+            <li>Sing In</li>
+          </ul>
+          <button class="btn btn-nav" id="scroll-btn">Get Started</button>
+        </div>
         <!-- <hr /> -->
       </nav>
       <div class="contain-header">
