modificato section, aggiunte icone e ottimizzate card con aggiunta di div e ottimizzazione di flexbox

--- a/U2-D5/base_di_partenza/index.html
+++ b/U2-D5/base_di_partenza/index.html
@@ -63,73 +63,137 @@
     <main>
       <!-- creo le 6 card -->
       <section>
-        <div class="titolo-section">
-          <img src="./assets/imgs/svg/trending.svg" alt="minilogo trend" />
-          <h3>Tranding on Medium</h3>
-        </div>
-        <div class="container-box">
-          <div class="box">
-            <div class="numero">01</div>
-            <div class="box-info">
-              <div class="box-info-titolo">
-                <img src="./assets/imgs/image01.jpeg" alt="icona articolo 1" />
-                <p>Tom Cooper</p>
+        <div class="contain-section">
+          <div class="titolo-section">
+            <img src="./assets/imgs/svg/trending.svg" alt="minilogo trend" />
+            <h3>Tranding on Medium</h3>
+          </div>
+          <div class="container-box">
+            <div class="box">
+              <div class="numero">01</div>
+              <div class="box-info">
+                <div class="box-info-autore">
+                  <img
+                    src="./assets/imgs/image01.jpeg"
+                    alt="icona articolo 1"
+                  />
+                  <p class="autore">Tom Cooper</p>
+                </div>
+                <div class="box-info-titolo">
+                  <h4>Ukraine War, 23 October 2022</h4>
+                </div>
+                <div class="box-info-data">
+                  <span>Oct 23</span>
+                  <span>5 min read</span>
+                </div>
               </div>
-              <h4>Ukraine War, 23 October 2022</h4>
-              <p>Oct 23·5 min read</p>
             </div>
-          </div>
-          <div class="box">
-            <div class="numero">02</div>
-            <div class="box-info">
-              <p>Arthur Hayes in Entrepreneur's Handbook</p>
-              <h4>Comeback</h4>
-              <p>Oct 26·24 min read</p>
+            <div class="box">
+              <div class="numero">02</div>
+              <div class="box-info">
+                <div class="box-info-autore">
+                  <img src="./assets/imgs/image02.png" alt="icona articolo 1" />
+                  <p class="autore">
+                    Arthur Hayes <span>in</span> Entrepreneur's Handbook
+                  </p>
+                </div>
+                <div class="box-info-titolo">
+                  <h4>Comeback</h4>
+                </div>
+                <div class="box-info-data">
+                  <span>Oct 26</span>
+                  <span>24 min read</span>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="box">
-            <div class="numero">03</div>
-            <div class="box-info">
-              <p>Tom Cooper</p>
-              <h4>
-                How I Learned to Love My Breasts Even Though One Is A Horcrux
-                For Voldemort
-              </h4>
-              <p>Oct 26·2 min read</p>
+            <div class="box">
+              <div class="numero">03</div>
+              <div class="box-info">
+                <div class="box-info-autore">
+                  <img
+                    src="./assets/imgs/image03.jpeg"
+                    alt="icona articolo 1"
+                  />
+                  <p class="autore">Tom Cooper</p>
+                </div>
+                <div class="box-info-titolo">
+                  <h4>
+                    How I Learned to Love My Breasts Even Though One Is A
+                    Horcrux For Voldemort
+                  </h4>
+                </div>
+                <div class="box-info-data">
+                  <span>Oct 26</span>
+                  <span>2 min read</span>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="box">
-            <div class="numero">04</div>
-            <div class="box-info">
-              <p>Frank Mastropolo in The Riffk</p>
-              <h4>
-                The Night Paul McCartney Donned a Disguise at Fillmore East
-              </h4>
-              <p>Oct 22·3 min read</p>
+            <div class="box">
+              <div class="numero">04</div>
+              <div class="box-info">
+                <div class="box-info-autore">
+                  <img src="./assets/imgs/image04.png" alt="icona articolo 1" />
+                  <p class="autore">
+                    Frank Mastropolo <span>in</span> The Riffk
+                  </p>
+                </div>
+                <div class="box-info-titolo">
+                  <h4>
+                    The Night Paul McCartney Donned a Disguise at Fillmore East
+                  </h4>
+                </div>
+                <div class="box-info-data">
+                  <span>Oct 22</span>
+                  <span>3 min read</span>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="box">
-            <div class="numero">05</div>
-            <div class="box-info">
-              <p>Frank Andrade in Towards Data Science</p>
-              <h4>
-                5 Python Projects to Automate Your Life: From Beginner to
-                Advanced
-              </h4>
-              <p>Oct 13·6 min read</p>
+            <div class="box">
+              <div class="numero">05</div>
+              <div class="box-info">
+                <div class="box-info-autore">
+                  <img
+                    src="./assets/imgs/image05.jpeg"
+                    alt="icona articolo 1"
+                  />
+                  <p class="autore">
+                    Frank Andrade <span>in</span> Towards Data Science
+                  </p>
+                </div>
+                <div class="box-info-titolo">
+                  <h4>
+                    5 Python Projects to Automate Your Life: From Beginner to
+                    Advanced
+                  </h4>
+                </div>
+                <div class="box-info-data">
+                  <span>Oct 13</span>
+                  <span>6 min read</span>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="box">
-            <div class="numero">06</div>
-            <div class="box-info">
-              <p>Wesley Smits in JavaScript in Plain English</p>
-              <h4>How To Make Visual Studio Code Look Amazing3</h4>
-              <p>Oct 20·7 min read</p>
+            <div class="box">
+              <div class="numero">06</div>
+              <div class="box-info">
+                <div class="box-info-autore">
+                  <img src="./assets/imgs/image06.png" alt="icona articolo 6" />
+                  <p class="autore">
+                    Wesley Smits <span>in</span> JavaScript in Plain English
+                  </p>
+                </div>
+                <div class="box-info-titolo">
+                  <h4>How To Make Visual Studio Code Look Amazing3</h4>
+                </div>
+                <div class="box-info-data">
+                  <span>Oct 20</span>
+                  <span>7 min read</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
-      <hr />
+
       <!-- creo la sezione articoli -->
       <div class="big-container">
         <article>
