ottimizzato stile della pagina, completato sezioni header, navbar, section, article e aside

--- a/U2-D5/base_di_partenza/index.html
+++ b/U2-D5/base_di_partenza/index.html
@@ -59,7 +59,7 @@
         />
       </div>
     </header>
-    <!--  <hr /> -->
+
     <main>
       <!-- creo le 6 card -->
       <section>
@@ -92,7 +92,7 @@
               <div class="numero">02</div>
               <div class="box-info">
                 <div class="box-info-autore">
-                  <img src="./assets/imgs/image02.png" alt="icona articolo 1" />
+                  <img src="./assets/imgs/image02.png" alt="icona articolo 2" />
                   <p class="autore">
                     Arthur Hayes <span>in</span> Entrepreneur's Handbook
                   </p>
@@ -112,7 +112,7 @@
                 <div class="box-info-autore">
                   <img
                     src="./assets/imgs/image03.jpeg"
-                    alt="icona articolo 1"
+                    alt="icona articolo 3"
                   />
                   <p class="autore">Tom Cooper</p>
                 </div>
@@ -132,7 +132,7 @@
               <div class="numero">04</div>
               <div class="box-info">
                 <div class="box-info-autore">
-                  <img src="./assets/imgs/image04.png" alt="icona articolo 1" />
+                  <img src="./assets/imgs/image04.png" alt="icona articolo 4" />
                   <p class="autore">
                     Frank Mastropolo <span>in</span> The Riffk
                   </p>
@@ -154,7 +154,7 @@
                 <div class="box-info-autore">
                   <img
                     src="./assets/imgs/image05.jpeg"
-                    alt="icona articolo 1"
+                    alt="icona articolo 5"
                   />
                   <p class="autore">
                     Frank Andrade <span>in</span> Towards Data Science
@@ -198,129 +198,168 @@
       <div class="big-container">
         <article>
           <div class="box-article">
-            <p>Robert Roy Britt</p>
-            <h2>How Old is Old?</h2>
-            <p>
-              What we consider “old” changes dramatically with age, and our
-              perspectives can be predictive of how well we age
-            </p>
-            <p>Oct 27 · 5 min read · Aging</p>
+            <div class="box-article-info">
+              <div class="box-info-autore">
+                <img src="./assets/imgs/image07.jpeg" alt="autore" />
+                <p class="autore">Robert Roy Britt</p>
+              </div>
+              <div class="box-article-par">
+                <h2>How Old is Old?</h2>
+                <p>
+                  What we consider “old” changes dramatically with age, and our
+                  perspectives can be predictive of how well we age
+                </p>
+                <div class="box-info-data">
+                  <p>Oct 27 · 5 min read · <span>Aging</span></p>
+                  <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </div>
+            <div class="box-article-img">
+              <img src="./assets/imgs/image08.jpeg" alt="bambina che sorride" />
+            </div>
           </div>
           <div class="box-article">
-            <p>Taru Anniina Liikanen</p>
-            <h2>Is Taylor Swift Allowed to Speak About Fat?</h2>
-            <p>
-              Can you speak about your trauma if you don't look traumatized?
-            </p>
-            <p>Oct 24 · 6 min read · Health</p>
+            <div class="box-article-info">
+              <div class="box-info-autore">
+                <img src="./assets/imgs/image09.jpeg" alt="autore" />
+                <p class="autore">Taru Anniina Liikanen</p>
+              </div>
+              <div class="box-article-par">
+                <h2>Is Taylor Swift Allowed to Speak About Fat?</h2>
+                <p>
+                  Can you speak about your trauma if you don't look traumatized?
+                </p>
+                <div class="box-info-data">
+                  <p>Oct 24 · 6 min read · <span>Health</span></p>
+                  <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </div>
+            <div class="box-article-img">
+              <img src="./assets/imgs/image10.jpeg" alt="taylor swift" />
+            </div>
           </div>
           <div class="box-article">
-            <p>David Rodenas, Ph. D.</p>
-            <h2>Don’t Screw Up, You Will Be Found Guilty</h2>
-            <p>
-              Software Engineer, yours is the right to produce high-quality work
-              at all times, also the liability.
-            </p>
-            <p>Oct 15 · 5 min read · Software Engineering</p>
+            <div class="box-article-info">
+              <div class="box-info-autore">
+                <img src="./assets/imgs/image11.jpeg" alt="autore" />
+                <p class="autore">David Rodenas, Ph. D.</p>
+              </div>
+              <div class="box-article-par">
+                <h2>Don’t Screw Up, You Will Be Found Guilty</h2>
+                <p>
+                  Software Engineer, yours is the right to produce high-quality
+                  work at all times, also the liability.
+                </p>
+                <div class="box-info-data">
+                  <p>Oct 15 · 5 min read · <span>Software Engineering</span></p>
+                  <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </div>
+            <div class="box-article-img">
+              <img src="./assets/imgs/image12.png" alt="dipinto persone" />
+            </div>
           </div>
           <div class="box-article">
-            <p>Microsoft Design</p>
-            <h2>Leave No Trace</h2>
-            <p>
-              How product designers can break from the status quo and help our
-              planet
-            </p>
-            <p>Oct 25 · 11 min read · Sustainability</p>
+            <div class="box-article-info">
+              <div class="box-info-autore">
+                <img src="./assets/imgs/image13.png" alt="autore" />
+                <p class="autore">Microsoft Design</p>
+              </div>
+              <div class="box-article-par">
+                <h2>Leave No Trace</h2>
+                <p>
+                  How product designers can break from the status quo and help
+                  our planet.
+                </p>
+                <div class="box-info-data">
+                  <p>Oct 25 · 11 min read · <span>Sustainability</span></p>
+                  <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </div>
+            <div class="box-article-img">
+              <img src="./assets/imgs/image14.png" alt="dipinto alberi" />
+            </div>
           </div>
           <div class="box-article">
-            <p>Scott H. Young</p>
-            <h2>Variability, Not Repetition, is the Key to Mastery</h2>
-            <p>
-              Bruce Lee is reported to have said, “I fear not the man who has
-              practiced 10,000 kicks once, but the man who has practiced one
-              kick 10,000...
-            </p>
-            <p>Oct 26 · 7 min read · Health</p>
+            <div class="box-article-info">
+              <div class="box-info-autore">
+                <img src="./assets/imgs/image15.jpeg" alt="autore" />
+                <p class="autore">Scott H. Young</p>
+              </div>
+              <div class="box-article-par">
+                <h2>Variability, Not Repetition, is the Key to Mastery</h2>
+                <p>
+                  Bruce Lee is reported to have said, “I fear not the man who
+                  has practiced 10,000 kicks once, but the man who has practiced
+                  one kick 10,000...
+                </p>
+                <div class="box-info-data">
+                  <p>Oct 26 · 7 min read · <span>Health</span></p>
+                  <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </div>
+            <div class="box-article-img">
+              <img src="./assets/imgs/image16.jpg" alt="bruce lee" />
+            </div>
           </div>
           <div class="box-article">
-            <p>Paul A. DeStefanoin Human Parts</p>
-            <h2>what I Overheard as an Escape Room Acto</h2>
-            <p>
-              Lock a group of people in a room and you’ll witness some
-              surprising confessions
-            </p>
-            <p>Jan 18, 2020 · 6 min read · Experiences</p>
+            <div class="box-article-info">
+              <div class="box-info-autore">
+                <img src="./assets/imgs/image17.png" alt="autore" />
+                <p class="autore">Paul A. DeStefanoin Human Parts</p>
+              </div>
+              <div class="box-article-par">
+                <h2>What I Overheard as an Escape Room Acto</h2>
+                <p>
+                  Lock a group of people in a room and you’ll witness some
+                  surprising confessions
+                </p>
+                <div class="box-info-data">
+                  <p>Jan 18, 2020 · 6 min read · <span>Experiences</span></p>
+                  <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </div>
+            <div class="box-article-img">
+              <img
+                src="./assets/imgs/image18.jpeg"
+                alt="sedia nella stanza rossa"
+              />
+            </div>
           </div>
           <div class="box-article">
-            <p>Kim Scott</p>
-            <h2>
-              6 Steps for Setting Measurable Goals to Avoid “Productivity
-              Paranoia”
-            </h2>
-            <p>
-              With more people working in remote and hybrid environments than
-              ever before, company, team and individual goals must be explicit
-              and…
-            </p>
-            <p>Oct 24 · 6 min read · Health</p>
-          </div>
-          <div class="box-article">
-            <p>Taru Anniina Liikanen</p>
-            <h2>Is Taylor Swift Allowed to Speak About Fat?</h2>
-            <p>
-              Can you speak about your trauma if you don't look traumatized?
-            </p>
-            <p>Oct 24 · 6 min read · Health</p>
-          </div>
-          <div class="box-article">
-            <p>David Rodenas, Ph. D.</p>
-            <h2>Don’t Screw Up, You Will Be Found Guilty</h2>
-            <p>
-              Software Engineer, yours is the right to produce high-quality work
-              at all times, also the liability.
-            </p>
-            <p>Oct 15 · 5 min read · Software Engineering</p>
-          </div>
-          <div class="box-article">
-            <p>Microsoft Design</p>
-            <h2>Leave No Trace</h2>
-            <p>
-              How product designers can break from the status quo and help our
-              planet
-            </p>
-            <p>Oct 25 · 11 min read · Sustainability</p>
-          </div>
-          <div class="box-article">
-            <p>Scott H. Young</p>
-            <h2>Variability, Not Repetition, is the Key to Mastery</h2>
-            <p>
-              Bruce Lee is reported to have said, “I fear not the man who has
-              practiced 10,000 kicks once, but the man who has practiced one
-              kick 10,000...
-            </p>
-            <p>Oct 26 · 7 min read · Health</p>
-          </div>
-          <div class="box-article">
-            <p>Paul A. DeStefanoin Human Parts</p>
-            <h2>what I Overheard as an Escape Room Acto</h2>
-            <p>
-              Lock a group of people in a room and you’ll witness some
-              surprising confessions
-            </p>
-            <p>Jan 18, 2020 · 6 min read · Experiences</p>
-          </div>
-          <div class="box-article">
-            <p>Kim Scott</p>
-            <h2>
-              6 Steps for Setting Measurable Goals to Avoid “Productivity
-              Paranoia”
-            </h2>
-            <p>
-              With more people working in remote and hybrid environments than
-              ever before, company, team and individual goals must be explicit
-              and…
-            </p>
-            <p>Oct 24 · 6 min read · Health</p>
+            <div class="box-article-info">
+              <div class="box-info-autore">
+                <img src="./assets/imgs/image19.jpeg" alt="autore" />
+                <p class="autore">Kim Scott</p>
+              </div>
+              <div class="box-article-par">
+                <h2>
+                  6 Steps for Setting Measurable Goals to Avoid “Productivity
+                  Paranoia”
+                </h2>
+                <p>
+                  With more people working in remote and hybrid environments
+                  than ever before, company, team and individual goals must be
+                  explicit and…
+                </p>
+                <div class="box-info-data">
+                  <p>Oct 24 · 6 min read · <span>Health</span></p>
+                  <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </div>
+            <div class="box-article-img">
+              <img
+                src="./assets/imgs/image20.jpg"
+                alt="persone che scrivono alla lavagna"
+              />
+            </div>
           </div>
         </article>
         <aside>
@@ -335,6 +374,17 @@
             <button>Machine Learning</button>
             <button>Productivity</button>
             <button>Politics</button>
+          </div>
+          <div class="container-setting">
+            <div>Help</div>
+            <div>Status</div>
+            <div>Writters</div>
+            <div>Blog</div>
+            <div>Carrers</div>
+            <div>Privacy</div>
+            <div>Terms</div>
+            <div>About</div>
+            <div>Knowable</div>
           </div>
         </aside>
       </div>
